source/stylesheets/base/_type.css.scss
// For some reason when building the fontURL function won't work. Changing from 'font_url' to 'font_url' (or vica versa) will fix this.
// I have no idea why this happens and it is not consistent

@import "compass/typography";
@import "base/colors";


/*************************************************************
 *  BASELINE
**************************************************************/

$base-font-size: 16px;
$base-line-height: 24px;

@include establish-baseline();


/*************************************************************
 *  TYPES OF TYPE
**************************************************************/

body {
  font-family: 'adobe-jenson-pro', Georgia, "Times New Roman", Times, serif;
  color: $black;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 700; // Foundation override.
  a {
    text-decoration: none;
  }
}

h1 {
  @include adjust-font-size-to(40px);
}

h2 {
  @include adjust-font-size-to(32px);
}

h3 {
  @include adjust-font-size-to(24px);
}

h4 {
  @include adjust-font-size-to(18px);
}

h3.name {
  font-weight: 400;
}

#contactForm h4, h4.title {
  @include adjust-font-size-to(18px);
  font-weight: 400;
}

.quote {
    font-weight: 400;
}

p {
  font-size :1.4rem;
  margin-bottom: 1.5rem;
  em {
    font-style: italic;
  }
  strong {
    font-weight: 700;
  }
  a {
    text-decoration: none;
    color: $blue;
  }
}

.social-card a {
    color: $navy;
}

.social-card a:hover {
    color:$blue;
}

a {
     color: $blue;
}

